[package]
name = "vnq_server"
version = "0.2.1"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/vnq_server"
description = "Backend GraphQL server for VNQ"

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.13"
juniper = "0.14.2"
futures = "0.3"
actix-web = "2.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
actix-cors = "0.2.0"
actix-web-httpauth = "0.4.2"
jsonwebtoken = "6.0.1"
ring = "^0.14.4"
data-encoding = "2.3.0"